--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "pydantic-settings>=2.10.1",
     "python-dateutil>=2.9.0.post0",
     "redis>=6.2.0",
+    "rich>=14.1.0",
     "selenium-base>=4.40.6",
     "uvicorn[standard]>=0.35.0",
 ]
