--- a/infra/ansible/playbook/kubernetes/default/secrets/docker.yaml
+++ b/infra/ansible/playbook/kubernetes/default/secrets/docker.yaml
@@ -1,15 +1,18 @@
 ---
-- name: Create docker-registry secrets // infra/ansible/playbook/kubernetes/default/secrets/docker.yaml
+- name: Create docker secrets // infra/ansible/playbook/kubernetes/default/secrets/docker.yaml
   hosts: dev
   become: true
   vars_files:
     - ../../../secrets/secrets.yaml
   vars:
     namespaces:
+      - nm-nginx
       - nm-proxies
       - nm-argo
       - nm-monitoring
       - nm-traefik
+      - nm-cert-manager
+
       - local-path-storage
 
   tasks:
@@ -22,3 +25,10 @@
       loop: "{{ namespaces }}"
       loop_control:
         label: "{{ item }}"
+
+    - name: Create proxies-test-secrets secret in each namespace
+      ansible.builtin.shell: |
+        kubectl create secret docker-registry proxies-test-secrets \
+          --docker-username={{ docker_proxies_username }} \
+          --docker-password={{ docker_proxies_password }} \
+          -n nm-develop --dry-run=client -o yaml | kubectl apply -f -
