--- a/kubernetes/helm/monitoring/grafana/values.yaml
+++ b/kubernetes/helm/monitoring/grafana/values.yaml
@@ -7,6 +7,10 @@ replicas: 2
 ingress:
   hosts:
     - grafana.collaboo.co
-
   tls:
     - name: grafana-collaboo-tls
+
+persistence:
+  enabled: true
+  volumename:
+    - name: grafana-pvc
