--- a/kubernetes/helm/monitoring/prometheus/values.yaml
+++ b/kubernetes/helm/monitoring/prometheus/values.yaml
@@ -1,2 +1,8 @@
 imagePullSecrets:
   - name: docker-secrets
+
+server:
+  persistentVolume:
+    enabled: true
+    existingClaim:
+      - name: prometheus-pvc
