ansible: remove Remove password when logging in

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -4,7 +4,8 @@ remote_user         = root
 host_key_checking   = false
 log_path            = ./data/ansible-log.txt
 vault_password_file = ~/.ansible_vault_pass.txt
-interpreter_python = /usr/bin/python3.12
+interpreter_python  = /usr/bin/python3.12
+ssh_args = -i ../id_rsa
 
 [privilege_escalation]
 become      = true
@@ -15,3 +16,4 @@ pipelining = true
 
 [ssh_connection]
 password_mechanism = sshpass
+ssh_args = -i ../id_rsa
