ci/cd: add needs

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,6 +30,7 @@ jobs:
             docker.io/kworkdevsecops/proxies:latest
 
   deploy-helm:
+    needs: build-and-push
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
